# skill_learning_in_robotic_manipulation

./: .gitignore  README.md  pyproject.toml
scripts/: linear.py  linear_basic.py  periodic.py  periodic_state_config.py  periodic_state_only.py
src/linear_extrapolation/: README.md  linear_basic_extrapolator.py  linear_extrapolator.py  visualizer.py
src/periodic_warping/: README.md  periodic_emb_state_config_model.py  periodic_emb_state_model.py  periodic_warping_model.py
src/skill_learning_in_robotic_manipulation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/transform_learning/: README.md  convex_hull_experiment.py  convex_hull_results.txt  dataset.py  differentiable_convex_hull_check.py  learn_transform.py
src/transform_learning/experiments/: convex_hull_experiment.py  differentiable_convex_hull.py
src/transform_learning/losses/: __init__.py  base.py  composite_loss.py  vertex_reconstruction.py  volume_preservation.py
src/transform_learning/metrics/: __init__.py  custom_metrics.py  tracker.py  visualizer.py
src/transform_learning/pipelines/: __init__.py  __main__.py  train_transform.py
src/transform_learning/tests/: test_vertex_loss.py  visualize_vertex_loss.py
src/transform_learning/training/: __init__.py  trainer.py
src/transform_learning/utils/: geometry.py
src/transform_learning/visualization/: __init__.py  metrics_visualizer.py
src/utils/: dummy_visualizer.py  generate_sinusoidal.py  mlp.py  visualizer.py
