[project]
name = "skill-learning-in-robotic-manipulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "scipy>=1.16.2",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
train-transform = "transform_learning.pipelines.train_transform:run_default_pipeline"
